--- a/greentrust/.gitignore
+++ b/greentrust/.gitignore
@@ -30,3 +30,10 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# pwa
+**/public/workbox-*.js
+**/public/sw.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
