--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@arcana/auth": "^1.0.1",
     "@arcana/auth-react": "0.0.3",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
