--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
+    "@react-icons/all-files": "^4.1.0",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
