--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "hardhat": "^2.12.5",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2"
+  },
+  "dependencies": {
+    "@polywrap/client-js": "^0.9.5"
   }
 }
