--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
-    "@polywrap/client-js": "^0.9.5"
+    "@polywrap/client-js": "^0.9.5",
+    "react-spinners": "^0.13.8",
+    "spinners-react": "^1.0.7"
   }
 }
