Added feature for Push Notifications

--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -18,8 +18,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.11.9",
     "@next/font": "13.1.6",
+    "@pushprotocol/restapi": "^0.6.0",
+    "@pushprotocol/uiembed": "^0.2.0",
     "@react-icons/all-files": "^4.1.0",
-    "ethers": "^6.0.3",
+    "ethers": "^5.7.2",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
