--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@polywrap/client-js": "^0.9.5",
-    "react-spinners": "^0.13.8",
-    "spinners-react": "^1.0.7",
     "dotenv": "^16.0.3",
-    "hardhat-contract-sizer": "^2.8.0"
+    "hardhat-contract-sizer": "^2.8.0",
+    "react-spinners": "^0.13.8",
+    "spinners-react": "^1.0.7"
   }
 }
