--- a/package.json
+++ b/package.json
@@ -23,17 +23,24 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.4",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.5",
     "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2"
+    "solidity-coverage": "^0.8.2",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@polywrap/client-js": "^0.9.5",
-    "react-spinners": "^0.13.8",
-    "spinners-react": "^1.0.7",
     "dotenv": "^16.0.3",
-    "hardhat-contract-sizer": "^2.8.0"
+    "hardhat-contract-sizer": "^2.8.0",
+    "react-spinners": "^0.13.8",
+    "spinners-react": "^1.0.7"
   }
 }
