--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -25,7 +25,8 @@
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
