--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -28,7 +28,8 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-multi-carousel": "^2.8.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
