--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.6.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@material-ui/core": "^4.12.4",
     "@polywrap/client-js": "^0.9.5",
     "dotenv": "^16.0.3",
     "hardhat-contract-sizer": "^2.8.0",
+    "material-ui-popup-state": "^5.0.4",
     "netslider": "^1.3.5",
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
