--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -24,6 +24,7 @@
     "@react-icons/all-files": "^4.1.0",
     "ethers": "^5.7.2",
     "ipfs-http-client-lite": "^0.3.0",
+    "material-ui-popup-state": "^5.0.4",
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
