--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@material-ui/core": "^4.12.4",
     "@polywrap/client-js": "^0.9.5",
+    "@superfluid-finance/ethereum-contracts": "^1.5.0",
+    "@superfluid-finance/sdk-core": "^0.6.1",
     "dotenv": "^16.0.3",
     "hardhat-contract-sizer": "^2.8.0",
     "material-ui-popup-state": "^5.0.4",
