--- a/iot/requirements.txt
+++ b/iot/requirements.txt
@@ -30,6 +30,7 @@ pkgutil-resolve-name==1.3.10
 protobuf==3.19.5
 pycryptodome==3.17
 pyrsistent==0.19.3
+python-dotenv==0.21.1
 requests==2.28.2
 rlp==2.0.1
 six==1.16.0
