--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install and Build
+      - name: Install and build
         run: |
           cd greentrust
           npm i --legacy-peer-deps
