--- a/greentrust/package.json
+++ b/greentrust/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -p 3002",
     "lint": "next lint",
-    "export": "next build && next start"
+    "export": "next build && next export"
   },
   "dependencies": {
     "@arcana/auth": "^1.0.1",
